# TCP-KNN

./: CMakeLists.txt  Canberra.cpp  Canberra.h  Catalog.cpp  Catalog.h  Chebyshev.cpp  Chebyshev.h  Client.cpp  Client.h  Database.cpp  Database.h  Distance.cpp  Distance.h  Euclidean.cpp  Euclidean.h  Manhattan.cpp  Manhattan.h  Minkowski.cpp  Minkowski.h  README.md  Server.cpp  Server.h  classificationLogic.cpp  classificationLogic.h  client.cpp  main.cpp  makefile  wine_Classified.csv
client/: main.cpp
